--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -85,7 +85,6 @@ end og alerts notices
 body{
 	background-color: $background;
 	text-rendering: optimizeLegibility;
-	font-family: klavika-web, 'Helvetica Neue', Helvetica, Arial, Geneva, sans-serif;
 }
 
 .header{
@@ -95,7 +94,7 @@ body{
 
 h1, h2, h3, h4, h5{
 	text-rendering: optimizeLegibility;
-	font-family: $headerFont;
+	font-family: $headerFont
 }
 
 
